Fix review comments

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <p class="cover-description__text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">Сделaть ставку</button>
+          <button type="button" class="bet-button">Сделaть ставку</button>
         </div>
       </section>
 
